--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@fontsource/geist-mono": "^5.2.7",
     "@fontsource/geist-sans": "^5.2.5",
     "@fontsource/source-serif-4": "^5.2.9",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "next-intl": "^4.7.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.6.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^10.1.11",
@@ -41,6 +44,7 @@
     "jsdom": "^26.0.0",
     "storybook": "^10.1.11",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "^5.1.4",
