--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/supabase-js": "^2.91.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "big.js": "^6.2.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
