--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.1",
+    "big.js": "^6.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "big.js": "^6.2.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "react": "19.2.3",
@@ -40,6 +41,7 @@
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "yahoo-finance2": "^3.13.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -49,6 +51,8 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@types/big.js": "^6.2.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
