--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "knip": "knip"
   },
   "dependencies": {
     "@fontsource/geist-mono": "^5.2.7",
@@ -53,7 +54,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/big.js": "^6.2.2",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^20",
+    "@types/node": "^20.19.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react-swc": "^3.11.0",
@@ -61,10 +62,11 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
     "jsdom": "^26.0.0",
+    "knip": "^5.82.1",
     "storybook": "^10.1.11",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
+    "typescript": "^5.9.3",
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.5"
