--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "react": "19.2.3",
-    "react-day-picker": "^9.13.0",
+    "react-day-picker": "^9.13.1",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "recharts": "^3.6.0",
@@ -68,6 +68,7 @@
     "eslint-config-next": "16.1.3",
     "jsdom": "^26.0.0",
     "knip": "^5.82.1",
+    "shadcn": "^3.8.4",
     "storybook": "^10.1.11",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
