--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.34.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.562.0",
     "next": "^16.1.6",
